K8S/inventory-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventorypservice-srv
spec:
  type: NodePort
  selector:
    app: inventoryservice
  ports:
    - name: inventoryservice
      protocol: TCP
      port: 80
      targetPort: 80
