K8S/redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-depl
spec:
  selector:
    matchLabels:
      app: redis-depl
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-depl
    spec:
      containers:
        - name: redis-depl
          image: redis
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: redis-depl-cluster
  labels:
    app: redis-depl
spec:
  type: ClusterIP
  selector:
    app: redis-depl
  ports:
    - name: redis-depl-cluster
      port: 6379
      targetPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: redis-depl-lb-srv
spec:
  type: LoadBalancer
  selector:
    app: redis-depl
  ports:
    - name: redis-depl-lb-srv
      protocol: TCP
      port: 6379
      targetPort: 6379
